Hearthbeat -Víchor,Aleluje. Espe - nech pada dazd.

--- a/moj_spevnik.tex
+++ b/moj_spevnik.tex
@@ -20,8 +20,9 @@
 \begin{titlepage}
 	\begin{center}
 		\vspace{\stretch{0.382}}
-		{\Huge Môj spevník}
+		{\Huge Môj spevník pre gitaru}
 		\\
+		\medskip \medskip \medskip 
 		\includegraphics[width=0.5\textwidth]{pigeon.pdf}
 		\\ 
 		\vspace{\stretch{0.618}}
@@ -928,6 +929,19 @@
 \end{minipage}
 
 \begin{minipage}{\textwidth}
+\begin{multicols*}{2}
+	\subsection{Nech padá dážď}
+	\begin{guitar}
+		Nech padá [Ami]dážď, padá [F]dážď
+		O[C]tvor, môj Pán svoju [G]rieku
+		\\
+		Vidieť ťa [F]túžim, zjav svoju [G]slávu
+		poznať ťa [Ami]môžem [G]viac
+		\\
+		Nech padá [F]dážď, padá [G]dážď
+		O[Ami]tvor, môj Pán svoju [G]rieku
+	\end{guitar}
+\columnbreak
 \subsection{Náš Pán On je kráľov Kráľ}
 \begin{guitar}
 	[Emi]Náš [C]Pán On je [G]kráľov Kráľ, 
@@ -935,6 +949,7 @@
 	On [C]má všetku [G]vládu a moc, 
 	náš [Ami]Pán, On je [Hmi]kráľov [Emi]Kráľ.
 \end{guitar}
+\end{multicols*}
 \end{minipage}
 
 \begin{minipage}{\textwidth}
@@ -975,7 +990,6 @@
 
 \begin{minipage}{\textwidth}
 \subsection{Náš Boh}
-\textit{CAPO 2 (dá sa aj bez)}
 \begin{multicols}{2}
 \begin{guitar}
 	[Emi]Vodu na [C]víno me[G]níš,
@@ -1002,6 +1016,7 @@
 \end{guitar}
 \end{multicols}
 \end{minipage}
+
 
 \newpage
 %%%%%%%%%%%%%% LCH
@@ -1120,35 +1135,34 @@
 \begin{minipage}{\textwidth}
 \section{Heartbeat}
 \subsection{Aleluja}
-\textit{CAPO 2}
 \begin{multicols*}{3}
 \begin{guitar}
-	G E D A Woah
+	A F\# E H Woah
 		
-	[G]Budem chváliť, 
-	[E]celým telom,
+	[A]Budem chváliť, 
+	[F#]celým telom,
 	[C#]svojim tancom,
-	a [A]svojim spevom.
+	a [H]svojim spevom.
 	\\
-	[G]Aleluja, [E]aleluja, 
-	[D]aleluja [A]znie.
+	[A]Aleluja, [F#]aleluja, 
+	[E]aleluja [H]znie.
 	Poď sloboda, rozprúď ducha
 	nech tu radosť neutícha.
 	\columnbreak
-	[E]A aj nech svet sa rúca
-	[A]ja viem, kam kráčať mám
-	[E]aj keď sa vody búria
-	[A]učíš ma kráčať po vlnách.
+	[F#]A aj nech svet sa rúca
+	[H]ja viem, kam kráčať mám
+	[F#]aj keď sa vody búria
+	[H]učíš ma kráčať po vlnách.
 	\\
 	Voláš ma do tanca
 	dávam ti svoju dlaň
 	zatváram svoje oči
 	otváram srdce dokorán.
 	\columnbreak
-	[G]Nad každou [A]bolesťou
-	nad každým trápe[H]ním
-	učíš ma tanco[F#]vať
-	počujem, spievaš mi.
+	[A]Nad každou bolesťou
+	[H]nad každým trápením
+	[C#]učíš ma tancovať
+	[G#]počujem, spievaš mi.
 \end{guitar}
 \end{multicols*}
 \end{minipage}
@@ -1268,6 +1282,41 @@
 \end{multicols*}
 \end{minipage}
 
+
+\begin{minipage}{\textwidth}
+\subsection{Víchor}
+\begin{multicols*}{2}
+	\begin{guitar}
+		P[Emi]ríď ako mocná rieka,
+		ne[G]ch sucho zmení sa v [D]dážď, jarný [C]dážď.
+		Ne[Emi]ch láska premôže ma
+		[G]ako mocný huri[D]kán, huri[C]kán.
+		\\
+		Sprav zo mňa ví[Emi]chor,
+		ktorý prišiel z púšte.
+		A [C]vášeň, ktorá siaha vyššie.
+		A lá[D]sku, veď mojou túžbou je mať Ťa v[C]iac.
+		Len mať Ťa viac.
+		\\
+		Prichádza mocná rieka
+		a sucho mení sa v dážď, jarný dážď.
+		Tvoja láska premáha ma
+		ako mocný hurikán, hurikán.
+		\columnbreak
+		[Emi]Už vidím nový dážď.
+		[G]Vidím nový dážď.
+		[D]Počujem hukot vody,
+		kt[C]orá sa valí na nás.
+		\\
+		[Emi]Ja vidím nový dážď.
+		[G]Už vidím nový dážď.
+		Vs[D]távam zo svojho strachu.
+		Ve[C]rím, že uzriem Ťa zas[Emi G D]. 
+		Ve[C]rím, že uzriem Ťa zas.
+	\end{guitar}
+\end{multicols*}
+\end{minipage}
+
 \newpage
 %%%%%%%%%%%%%% RICHARD CANAKY
 
@@ -1332,7 +1381,7 @@
 	Možno len tichý plač, 
 	[Emi]len [D]bolesť čo mám[G],
 	svoju [Emi]hĺbku [D]srdca ti dám[G], 
-	môj [A]láskavý Pán.
+	môj [A]láskavý [D]Pán.
 	\columnbreak
 	2.[D]Kvôli tebe dýchať [G]smiem, 
 	môj dlh [A]splatil si [D]sám
