--- a/moj_spevnik.tex
+++ b/moj_spevnik.tex
@@ -900,35 +900,6 @@
 \end{minipage}
 
 \begin{minipage}{\textwidth}
-\subsection{Na krídlach lásky}
-\begin{multicols*}{2}
-\begin{guitar}
-	[Emi]Voláš ma tam,
-	[G]kde tvoja sláva prebýva,
-	[D]voláš ma tam,
-	[C]kde láska sa neskrýva.
-	\\
-	[Emi]Silu mi dáš
-	[G]aj keď nevládzem,
-	[D]len s tebou chcem ísť
-	[C]keď strácam už nádej.
-	\\
-	[G]Oo[Ami]oooo[Emi]oooo[C]oo
-	\columnbreak
-	[Emi]Na krídlach lásky Pane,
-	[G]nesieš ma neprestajne,
-	[D]voláš ma do hĺbky,
-	[C]preskúmať krásu krás.
-	\\
-	[Emi]Kým ruky zdvihnuté mám
-	[C]ja víťazím,
-	[G]kým pohľad na teba mám
-	[D]ja mám dosť síl.
-\end{guitar}
-\end{multicols*}
-\end{minipage}
-
-\begin{minipage}{\textwidth}
 \begin{multicols*}{2}
 	\subsection{Nech padá dážď}
 	\begin{guitar}
@@ -1013,6 +984,74 @@
 	[C]nemôže vládnuť strach
 	[G]keď náš Boh je s nami
 	[D]kto môže stáť proti nám?:/ \textit{+ 2x Ref.}
+\end{guitar}
+\end{multicols}
+\end{minipage}
+
+\begin{minipage}{\textwidth}
+\subsection{Na krídlach lásky}
+\begin{multicols}{2}
+\begin{guitar}
+	[Emi]Voláš ma tam, kde [G]tvoja sláva prebýva,
+	[D]voláš ma tam, kde [C]láska sa neskrýva.
+	[Emi]Silu mi dáš [G]aj keď nevládzem,
+	len s [D]tebou chcem ísť 
+	aj keď [C]strácam už nádej.
+	\\
+	[G]Oo  [Ami]oooo  [Emi]oooo  [C]oo
+	\columnbreak
+	[Emi]Na krídlach lásky Pane,
+	[G]nesieš ma neprestajne,
+	[D]voláš ma do hĺbky,
+	[C]preskúmať krásu krás.
+	\\
+	[Emi]Kým ruky zdvihnuté [C]mám
+	ja víťa[G]zím,
+	kým pohľad na teba [D]mám
+	ja mám dosť [Emi]síl.
+\end{guitar}
+\end{multicols}
+\end{minipage}
+
+
+\begin{minipage}{\textwidth}
+\subsection{Nekonečná láska (Reckless love)}
+\begin{multicols}{2}
+\begin{guitar}
+	Verse 1:
+	[Emi]Skôr než uzrel som sv[D]et, 
+	ty spieval si n[C]ado mnou.
+	[Emi]Vždy si bol k[D]u mne tak láska[C]vý.
+	[Emi]Skôr než dýchať som sm[D]el, 
+	vdýchol si ži[C]vot svoj.
+	[Emi]Vždy si bol k[D]u mne tak láska[C]vý.
+	\\
+	Verse 2:
+	[Emi]Skôr než tvojim som b[D]ol, 
+	o mňa si [C]zápasil.
+	[Emi]Vždy si bol k[D]u mne tak láska[C]vý.
+	[Emi]Keď slabý som b[D]ol, 
+	ty za mňa si z[C]aplatil.
+	[Emi]Vždy si bol k[D]u mne tak láska[C]vý.
+	\columnbreak
+	Chorus:
+	O ty m[Emi]ocná, večná n[D]ekonečná 
+	[C]láska Otca k [G]nám.
+	Ty op[Emi]ustíš stáda, n[D]eprestávaš 
+	[C]kým nenájdeš m[G]a.
+	Nedá sa [Emi]kúpiť, nedá zas[D]lúžiť, 
+	stále [C]dávaš seba v[G]iac.
+	O ty m[Emi]ocná, večná, n[D]ekonečná 
+	[C]láska Otca k [G]nám
+	\\
+	Bridge:
+	[Emi]Nie je tma čo neprež[D]iariš
+	Vrch ktorý nezd[C]oláš
+	Tak chceš ma [G]nájsť
+	\\
+	[Emi]Nie je múr ktorý nezv[D]alíš
+	Klam čo neodzbr[C]ojíš
+	Tak chceš ma [G]nájsť
 \end{guitar}
 \end{multicols}
 \end{minipage}
@@ -1212,9 +1251,9 @@
 	\\
 	[D]Darujem ti slávu
 	[A]pôjdem ľahšie bez 
-	nej
-	[Hmi]lásku vyvýšim
-	[G]nič mi nezabráni...
+	[Hmi]nej
+	lásku vyvýš[G]im
+	nič mi nezabráni...
 	\columnbreak
 	...[D]prísť
 	pred Tebou [A]stáť
@@ -1223,7 +1262,7 @@
 	\\
 	[D]Striasam zo seba
 	[F#]bohatstvo tohto sveta
-	nech [Hmi]znova vidím Ťa,
+	nech [G]znova vidím Ťa,
 	nech [Hmi]znova počujem 
 	[A]Tvoj hlas.
 	\\
@@ -1316,6 +1355,143 @@
 	\end{guitar}
 \end{multicols*}
 \end{minipage}
+
+
+\begin{minipage}{\textwidth}
+\subsection{Milosťou žijem}
+\begin{multicols*}{3}
+	\begin{guitar}
+		S[F]trhol ma do tanca
+		s[Ami]rdcom na srdce
+		T[Dmi]ajomstvom bláznovstva
+		[B]láskou ma [C]omámil
+		\\
+		Milosťou žijem
+		nech robí vo mne
+		čo sa jej zapáči
+		čo sa jej zachce
+		\columnbreak
+		Vodí ma do záhrad
+		stúpame do kopca
+		Vodu mi podáva
+		čo tečie z jeho rán
+		\\
+		A čím viac pijem z nej
+		tým viac smädí ma
+		Tá voda živá je
+		srdce mi obmýva
+		\columnbreak
+		Až [Dmi]do dôsledkov
+		krva[Ami]vých stôp
+		[B]Víťaznou vierou
+		[C]a Božou mocou
+		\\
+		Až [Gmi]do dôsledkov
+		krva[F]vých stôp
+		[Dmi]Víťaznou vierou
+		[C]a Božou mocou
+	\end{guitar}
+\end{multicols*}
+\end{minipage}
+
+\begin{minipage}{\textwidth}
+\begin{multicols*}{2}
+\subsection{Svitanie}
+\begin{guitar}
+	[C#mi]Moje srdce len Tebe spieva
+	[A]Moja duša chválou znie
+	[E]Aj keď svet sa stále stmieva
+	[H]Ja chcem tu vidieť svitanie[C#mi].
+	\\
+	R: [C#mi]Svitani[A]e Ooo[E]oo,
+	[H]ja chcem tu vidieť svitanie[C#mi].
+	Svitani[A]e Ooo[E]ooo[H].
+	\\
+	[C#mi]Ako tvoja rieka čo preráža skaly
+	[A]Ako tvoji vtáci čo letia do diali
+	[E]Ako tvoje stromy nech hľadím do [H]výšavy.
+\end{guitar}
+\columnbreak
+\subsection{Nech tvoja sláva}
+\begin{guitar}
+	[C#]Nech Tvoja sláva naplní [A]zem,
+	Teba z [E]tváre do tváre vidieť [H]chcem.
+	\\
+	[C#]Tvoja láska nemá hraníc, 
+	[A]Tvoju lásku nič nezastaví,
+	[E]jeden dotyk na mojom srdci, 
+	[H]Tebou som premože[C#]ný.
+	\\
+	[A]Láskou premože[E]ný
+	[H]tebou som premož[C#]ený
+\end{guitar}
+\end{multicols*}
+\end{minipage}
+
+\begin{minipage}{\textwidth}
+\subsection{Strhni Ma}
+\begin{multicols*}{2}
+\begin{guitar}
+	[G]Strhni ma do svojej lásky Kráľ,
+	nech [D]nerozmýšľam, len utekám,
+	[Emi]za Tebou, len [C]za Tebou.
+	\\
+	[G]Prosim, buď teraz [Hmi]so mnou,
+	[Emi]už vidím mal si pravdu,
+	[C]viem dlho som bol [G]preč.
+	\columnbreak
+	Prosím, zaveď ma [Hmi]domov,
+	[Emi]chcem byť zas Tvojím synom,
+	[C]zlož vinu z mojích [G]pliec.
+	\\
+	Ja [G]som kto som, lebo Ty si kto si.
+	ja [D]viem, kto som, lebo Ty Káľom si,
+	[Emi]nebies Kráľ, môj [C]nebies Kráľ.
+\end{guitar}
+\end{multicols*}
+\end{minipage}
+
+\begin{minipage}{\textwidth}
+\subsection{Radostný Kráľ}
+\begin{multicols*}{2}
+\begin{guitar}
+	/:
+	[G]Láska, ktorá nemá hraníc
+	[D]a nikdy nezakolíše sa,
+	[Emi]nikdy nezakolíše sa
+	[C]a nikdy nezíde z trónu.
+	\\
+	[G]Láska, čo sa nezastaví
+	[D]a nikdy nepomýli sa,
+	[Emi]nikdy nepomýli sa,
+	[C]Neviem k čomu prirovnám ju. [G D Emi C] :/ 
+	\\
+	/:[G]Radostný [Hmi]Kráľ,
+	sám Láskou sa naz[Emi]val.
+	Oblieka mi nádej,
+	[C]radosť mi nosí ako dar.:/
+	\\
+	[G]Uzdravuješ zrane[H7]né.
+	[Emi]Obnovuješ zlome[C]né. 
+	\columnbreak
+	[G]Uzdravuješ zranené, 
+	[H7]srdcia aj životy.
+	[Emi]Obnovuješ zlomené, 
+	[C]taký Kráľ si Ty.
+	\\
+	/:[C]Tu pred Tebou zložím jarmo,
+	[Emi]ktoré si zbytočne nosím.
+	[G]Tu pred tebou skloním hlavu
+	[D]a vyznám Ti, že si verný.:/
+	[D]a vyznám Ti, \textit{som Tvoje [C]dieťa}.
+	\\
+	[Emi]Stále som Tvoje [G] dieťa.
+	[D]Stále som Tvoje [C]dieťa.
+	[Emi]Stále som Tvoje [G]dieťa[D].
+\end{guitar}
+\end{multicols*}
+\end{minipage}
+
 
 \newpage
 %%%%%%%%%%%%%% RICHARD CANAKY
@@ -2368,7 +2544,239 @@
 \end{multicols}
 \end{minipage}
 
-%%%%%%%%%%%%%% SIMA MARTAUSOVÁ
+%%%%%%%%%%%%%% KOLEDY
+
+\begin{minipage}{\textwidth}
+\section{Koledy}
+\subsection{Madona s dieťaťom}
+\begin{multicols}{2}
+\begin{guitar}
+	[Dmi]Po krásnej tvári [C]blúdi sen
+	Keď [B]k lícam túli si [A]dieťa
+	To [Dmi]býva vzácna [C]chvíľa žien
+	Keď [B]v tráve [A]kropaje [Dmi]svietia
+	\\
+	R.: [F]Spí Madona [C]s dieť[Ami]aťom
+	A [Dmi]anjel im spieva [A]z výšky
+	[F]Spí Madona [C]s dieť[Ami]aťom
+	A [Dmi]neznámi [A]sú si dnes [Dmi]blízki
+	\columnbreak
+	[Dmi]Dnes líha líška [C]k vtáčatám
+	Ba[B]ránka zlý vlk dnes [A]chráni
+	Dnes ž[Dmi]iaden zúfalec [C]nie je sám
+	A [B]máme [A]dokorán [Dmi]brány
+	\\
+	[Dmi]Hľa zástup hviezdny [C]stráži ju
+	A [B]krásne piesne jej [A]hrá noc
+	Tak [Dmi]skús tiež nájsť [C]Máriu
+	A [B]nájdeš [A]kľúče od [Dmi]Vianoc
+\end{guitar}
+\end{multicols}
+\end{minipage}
+
+\begin{minipage}{\textwidth}
+\subsection{Tichá noc}
+\begin{multicols}{2}
+\begin{guitar}
+	[A]Tichá noc, svätá noc!
+	[E]Všetko spí, [A]všetko sní,
+	[D]sám len svätý bdie [A]dôverný pár,
+	[D]stráži Dieťatko, [A]nebeský dar.
+	[E]Sladký Ježiško [A]spí,[F#]sní,
+	[A]nebesky[E7]ticho spí,[A]sní.
+	\\
+	[A]Tichá noc, svätá noc!
+	[E]Anjeli [A]zleteli,
+	[D]najprv pastierom [A]podali zvesť,
+	[D]ktorá svetom dnes[A]dáva sa niesť:
+	[E]Kristus, Spasiteľ [A]je [F#]tu,
+	[A]Tešiteľ [E7]sveta je [A]tu!
+	\columnbreak
+	[A]Tichá noc, svätá noc!
+	[E]Nežná tvár, [A]lásky žiar,
+	[D]božsky rozsieva [A]v jasličkách tam:
+	[D]bije záchranná [A]hodina nám
+	[E]v tvojom zrodení,[A]Boh[F#]Syn,
+	[A]Ježiško,[E7]Láska, Boh [A]Syn!
+	
+\end{guitar}
+\end{multicols}
+\end{minipage}
+
+\begin{minipage}{\textwidth}
+\subsection{Aký je to svit}
+\begin{guitar}
+	[F]Aký je to svit, čože to má byť v Be[C]tle[F]me?
+	/: Hore sa majme, [C]hneď povstávajme [F]zo [C]ze[F]me! :/
+	\\
+	Ej, ej, pastieri, aké to chýry, aký hlas?
+	/: Či sa mi sníva, či anjel spieva, a zve nás? :/
+	\\
+	No nemeškajme, hore sa majme, je iste
+	/: niečo nového, neslýchaného pri meste. :/
+	\\
+	Z neba mal stúpiť, smrťou vykúpiť celý svet
+	/: predpovedaný, zrodený z Panny ako kvet. :/
+	\\
+	To sa ten istý z Panenky čistý narodil
+	/: Boží Syn tu dnes, ako to z nebies hlas tvrdil. :/
+\end{guitar}
+\end{minipage}
+
+\begin{minipage}{\textwidth}
+\subsection{Vstávajte pastieri}
+\begin{multicols}{2}
+\begin{guitar}
+	[D]Vstávajte pastieri, [E]berte sa [A]hor
+	[D]Aká to novina, [G]dajte po[D]zor
+	[D]Aké [A]to [D]zázra[A]ky [D]javia [A]sa [D]na ne[A]bi.
+	[D]Nikdy som nevidel [E]jak som sta[A]rý
+	[D]Na nebi vysokom [G]takej ž[A]ia[D]ry
+	Nikdy som nevidel jak som starý
+	Na nebi vysokom takej žiary
+	\\
+	Len sa ma nebojte pastuškovia
+	Prichádzam k vám ako anjel Slova
+	Aby som vám zvestil, že sa vám narodil
+	Mesiáš v Bethleme, Ježiš malý
+	Ktorého oddávna ste čakali
+	\columnbreak
+	[F]Iďte a nájdete [G]Kráľa kráľ[C]ov
+	[F]Ježiška [Ami]malého, [B]Pána [C]pá[F]nov
+	[F]V mestečku Betleme, [Dmi]v jasličkách [B]na sla[C]me
+	[F]Leží náš Spasiteľ [G]narode[C]ný
+	[F]V chudobných [Dmi]plienočkách [B]pol[C]ože[F]ný
+	Leží náš Spasiteľ narodený
+	V chudobných plienočkách položený
+\end{guitar}
+\end{multicols}
+\end{minipage}
+
+\begin{minipage}{\textwidth}
+\subsection{Povedzte nám pastuškovia}
+\begin{multicols}{2}
+\begin{guitar}
+	[C]Povedzte nám pastuškovia, č[Dmi]o ste [G]vide[C]li,
+	keď ste sa tak o polnoci [Dmi]všetci [G]rozbeh[C]li.
+	/:[F]Vi[G]deli [C]dieťatko, [Dmi]krás[G]ne pa[C]choliatko,
+	narodené v Bet[G]le[C]me.:/
+	\\
+	Ktože vám čo o dieťati tomto povedal.
+	Ja by som bol s vami ta šiel, 
+	keby som bol znal.
+	/:Anjeli spievali, nám oznamovali,
+	že sa Kristus narodil.:/
+	\columnbreak
+	A kdeže je na hospode s Matkou sveta Kráľ,
+	by som i ja ta šiel s vami a ho privítal.
+	/:V chudobnej maštali, tam mu aj postlali,
+	tam je jeho hospoda.:/
+	\\
+	Anjeli spievali, nám oznamovali,
+	že sa Kristus narodil.
+	/:V chudobnej maštali, tam mu aj postlali,
+	tam je jeho hospoda.:/
+\end{guitar}
+\end{multicols}
+\end{minipage}
+
+\begin{minipage}{\textwidth}
+\subsection{Vianočná hviezda (The First Noël)}
+\begin{multicols}{2}
+\begin{guitar}
+	Malá [C]hviezda belasá
+	Pozri [Ami]schádza až [Emi]k nám
+	Tíško [F]dopadá [C]z výšky na [F]obločný [C]rám
+	\\
+	Z akej [C]diaľky prišla k nám
+	Akú [Ami]prešla až [Emi]púť
+	Skry ju [F]do dlaní [C]nedovoľ [F]jej vyhas[C]núť
+	\\
+	R.: Hviezda vianočná
+	Hviez[Ami]da vianoč[Emi]ná
+	[F]Ako Jezu[C]liatku [F]svieti aj [C]inám
+	\columnbreak
+	[C]Je to zázrak ľahučký
+	Srdce [Ami]odvážne [Emi]má
+	Prive[F]die všetkých [C]pútnikov [F]až k jaslič[C]kám
+	\\
+	Svieti tým čo hľadajú
+	do tých [Ami]prastarých č[Emi]ias
+	V ktorých [F]Ježiška s [C]Máriou [F]možete [C]nájsť
+\end{guitar}
+\end{multicols}
+\end{minipage}
+
+\begin{minipage}{\textwidth}
+\subsection{Svet lásku má}
+\begin{multicols}{2}
+\begin{guitar}
+	[C]Koľko [C7]býva [F]dní,
+	[B]zlých a [Gmi]zálud[C]ných,
+	[C7]keď náhle [F]stíchne [Dmi]vták,
+	[B]seba strácaš v zrkad[Gmi]lách.
+	Pre tie chvíle Pán
+	dieťa dáva nám.
+	V očiach má nádej hviezd,
+	po cestách nás prišlo viesť.
+	\\
+	[C7]Svet lásku [B]má.
+	[C7]Anjel píše [Dmi]krídlom [C]zopár [B]viet,
+	tie [Gmi]dávne piesne necháš [C]znieť.
+	Svet lásku [Dmi]má.
+	[C]Svet lásku [B]má.
+	[C7]Pozri nosí [Dmi]krásnu [C]detskú [G]tvár.
+	A [B]dní čo máme je len [C]pár.
+	Svet lásku [F]má.
+	\columnbreak
+	Když byl vítr v nás,
+	střepy prázdnych váz
+	a housle v závějích,
+	někdo věčný na nás dých.
+	\\
+	Opět máš chuť žít (Opäť máš chuť žiť)
+	vždyť je štít (veď je láska štít)
+	Radostné trápení,
+	uvěřte dávným znamením (Oh, znamením)
+	\\
+	Svět lásku má.
+	Ač má jenom sílu motýlí,
+	kdo věří v ní, se nemýlí.
+	Svět lásku má.
+	Svět lásku má.
+	Víš, není už jen v dávných pohádkách,
+	a z výše zlétla na tvuj práh.
+	Svět lásku má.
+\end{guitar}
+\end{multicols}
+\end{minipage}
+
+\begin{minipage}{\textwidth}
+\subsection{Búvaj dieťa krásne}
+\begin{multicols}{2}
+\begin{guitar}
+	[C]Búvaj, dieťa, [dmi]krás[G]ne, [C]uložené [dmi]v ja[G]sle.
+	[C]Búvaj, [G]búvaj, [F]pach[G]oľa, [C]milos[G]tivé [F]Jez[G]uľa,
+	[C]budeme Ťa [F]kolí[G]sať,[C]abys [dmi]mohol [G]do[G7]bre [C]spať.
+	[C]Ježišku náš [dmi]mi[G]lý,[C]aby sa Ti [dmi]sni[G]li
+	[F]veľmi [dmi]krásne [C]sny, [dmi]veľmi [G]krásne [C]sny.
+	\columnbreak
+	Drozdy a hrdličky, chystajte pesničky,
+	nech sa Dieťa poteší,na tom našom salaši.
+	Spev škovránka, slávika, k tomu pekná muzika!
+	My budeme s vami spievať za jasľami,
+	Synu milému, Synu milému.
+	\\
+	Hory, ticho buďte, Dieťa nezobuďte,
+	nech si ono podrieme, na slame a na sene.
+	Aj vy malé fialky, zaváňajte do ďialky,
+	zavejte mu vône, Pánovi na tróne,
+	ticho, sladúčko, ticho, sladúčko.
+\end{guitar}
+\end{multicols}
+\end{minipage}
+
+%%%%%%%%%%%%%% KAREL KRYL
 \section{Karel Kryl}
 
 \begin{minipage}{\textwidth}
