Way Maker od Espe

--- a/moj_spevnik.tex
+++ b/moj_spevnik.tex
@@ -1056,6 +1056,43 @@
 \end{multicols}
 \end{minipage}
 
+\begin{minipage}{\textwidth}
+	\subsection{Si cesta (Way Maker)}
+	\begin{multicols}{2}
+		\begin{guitar}
+			Si prítomný[F], v strede našich chvál[C],
+			ja chválim ť[G]a, ja chválim ť[Am]a.
+			Si prítomný, konáš mocne v nás, 
+			ja chválim ťa, ja chválim ťa.
+			\\
+			[F]Si cesta, zazraky tvoríš, 
+			[C]prísľuby plníš, 
+			dáš svetlo v tmá[G]ch,môj Boh, 
+			tým si pre mňa T[Am]y.
+			\\
+			Si prítomný, dotýkaš sa rán, 
+			ja chválim ťa, ja chválim ťa.
+			Si prítomný, uzdravuješ nás, 
+			ja chválim ťa, ja chválim ťa.
+			\columnbreak
+			Si prítomný[], srdciam milosť dáš, 
+			ja chválim ťa, ja chválim ťa.
+			Si prítomný, môj život pretváraš, 
+			ja chválim ťa, ja chválim ťa.
+			\\ 
+			tým si pre mňa T[F]y. 
+			tým si pre mňa T[C]y. 
+			tým si pre mňa T[G]y. 
+			tým si pre mňa T[Am]y.
+			\\
+			[F]Aj keď to vždy nevidím, Ty konáš.
+			[C]Aj keď to vždy necítim, Ty konáš.
+			[G]Ja to viem, že Ty to nevzdáš,
+			á[Am]no viem, nikdy to nevzdáš.
+		\end{guitar}
+	\end{multicols}
+\end{minipage}
+
 
 \newpage
 %%%%%%%%%%%%%% LCH
