--- a/moj_spevnik.tex
+++ b/moj_spevnik.tex
@@ -402,34 +402,6 @@ Ho[F]san[G]na, ho[A]sanna, ho[F]sanna na [G]výsos[A]tiach!
 \end{song}
 
 
-\begin{song}{Miťo Bodnár - Čo to dá}{2}
-	[Hmi]Tak jak [G]odpúšťam[D]e
-	[Hmi]my svojim [G]vinní[D]kom
-	[Hmi]tak odpusť [G]nám ty, Pan[D]e
-	[Hmi]a nene[G]chaj nás v [D]zlom
-	
-	[Hmi]Tvoja [G]vôľa nech j[D]e
-	[Hmi]v nebi [G]aj na zem[D]i
-	[Hmi]tí, čo chlieb [G]denne prosi[D]a
-	[Hmi]tak, Pane, [G]to sme my
-	[D]tu dolu na zemi [Hmi G D].
-	\columnbreak
-	\textit{\color{gray}Chorus 1:}
-	Budem [Hmi]chváliť svojho [G]Pána
-	on mi [D]silu na to [A]dá
-	budem [Hmi]spievať svojmu [G]Bohu
-	[D]spievať, čo to [A]dá
-	čo to [Hmi]dá [G D A].
-	
-	\textit{\color{gray}Chorus 1:}
-	Chcem [Hmi]teba vzývať, [G]Bože
-	[D]každý jeden [A]deň
-	ty [Hmi]víťaz si nad [G]hriechom
-	tak [D]preto spievať [A]chcem
-	spievať [Hmi]smiem [G D A].
-\end{song}
-
-
 \begin{song}{Tvoja tvár}{2}
 	\textit{\color{gray}CAPO 1}
 	Si [C]ten ktorý sa zriekol svojich [F]ciest,
@@ -1057,6 +1029,44 @@ tým si pre mňa T[Am]y.
 á[Am]no viem, nikdy to nevzdáš.
 \end{song}
 
+
+\begin{song}{Tebe, môj Boh}{2}
+	[Em]Len tvoja [C]láska z prachu nás [G]dvíha
+	do tvojej [D]slávy z temnoty d[Em]ní
+	bremená [C]lámeš, v trápení [G]síl dáš
+	uzdravuj [D]nás
+	\\
+	[Em]K tebe, môj Boh, dvíham svoj hlas
+	[C]tebe, môj Boh, vzdávam chválu
+	[G]K tebe, môj Boh, dvíham svoj hlas
+	[D]Spievam aleluja
+	\columnbreak
+	[Em]Putá si [C]zlámal, oči ot[G]váraš
+	armáda K[D]ráľa dnes začína rá[Em]sť
+	Smrť viac ne[C]má moc
+	víťazstvo [G]nám dal náš živý [D]Pán
+	\\
+	[Em]Aleluj[C]a, aleluj[G]a, aleluj[D]a
+	(spievam aleluj[Em]a)
+	\\
+	Chválou [Em]znie
+	Svä[C]tý, svä[G]tý, svä[D]tý
+	Tvoje meno znie
+	Svätý, Svätý, Svätý
+\end{song}
+
+\begin{song}{Svätý (Holy)}{1}
+\textit{\color{gray}Capo 3}
+[Em]Len jedno slovo na perách [Am]mám
+keď to aký si vyjadriť mám
+\\
+[Em]Svätý, [Am]Svätý, [G]Boh [Hm]všemohúci
+\\
+[Em]Nie je nik ako Ty
+si Boh Svätý, Svätý
+\columnbreak
+\end{song}
+
 \newpage
 %%%%%%%%%%%%%% LCH
 
@@ -1653,32 +1663,27 @@ Budúcnosť a nádej pre mňa [H]má[C#mi G#mi E].
 \begin{song}{Oceány}{2}
 \textit{\color{gray}CAPO 1}
 [Dmi]Pozývaš ma [C]do nezná[F]ma
-pre[C]chádzať sa po [G]vodách
+pre[C]chádzať sa po [B]vodách
 [Dmi]Tam ťa nájdem [C]napriek [F]búrkam
-zvlá[C]dnem stáť na [G]hlbinách
+zvlá[C]dnem stáť na [B]hlbinách
+\\
+[B]Na Teba [F]Ježiš zavo[C]lám
+[B]ku Tebe [F]svoj zrak upie[C]ram
+[B]len Tvoja [F]náruč pokoj [C]dá
+Tvoja [B]som a [C]Ty si [Dmi]môj[C F C B].
+\columnbreak
+[Dmi]Milosťou ma ch[C]rániš v [F]búrkach
+s istot[C]ou ma sprevádz[B]aš
+[Dmi]Napriek môjmu [C]strachu z [F]pádov
+viesť ma [C]smieš, Ty nezly[B]háš
+\\
+[Dmi]Zaveď ma na miesta, [C]bezhraničnej [F]viery
+chcem k[C]ráčať nad vodami
+tam [B]kam ma zavoláš.
 
-
-[C]Na Teba [G]Ježiš zavo[F]lám
-[C]ku Tebe svoj [G]zrak upie[F]ram
-[C]len Tvoja [G]náruč pokoj [F]dá
-Tvoja [G]som a [C]Ty si [Dmi]môj[C],[F],[C],[G]
-
-
-Milosťou ma chrániš v búrkach
-s istotou ma sprevádzaš
-Napriek môjmu strachu z pádov
-viesť ma smieš, Ty nezlyháš
-
-
-Zaveď ma na miesta
-bezhraničnej viery
-chcem kráčať nad vodami
-tam kam ma zavoláš
-
-Vezmi hlbšie, než sa
-odvažujem prosiť
-len v Tvojej prítomnosti
-moja viera narastá
+[Dmi]Vezmi hlbšie, než sa [C]odvažujem [F]prosiť
+len v [C]Tvojej prítomnosti
+moja [B]viera narastá.
 \end{song}
 
 \newpage
@@ -1772,6 +1777,155 @@ za t[D]ebou utekám.
 [C]Vzdávam sa svojich snov,
 Ž[G]iaden strach a žiaden vzdor. 
 C[D]elý som tvoj
+\end{song}
+
+\begin{song}{Volám Ježiš}{2}
+Volám [Dm]Ježiš príď ku mňe [C]zas,
+nech láska pohltí [B]nás.
+\\
+Ako [Dm]láva
+[F]leje sa do hlbín, 
+leje sa do hlbí[C]n[B].
+
+Tvoja [Dm]láska
+[F]každú pýchu borí 
+každé srdce tvorí [C]znovu čistý.
+\columnbreak
+Ja túžim [Dm]splynúť, s Tebou [F]splynúť,
+jeden deň láskou sa stať.
+Ja túžim [Dm]splynúť, s Tebou [F]splynúť,
+naveky pred trónom stáť.
+\end{song}
+
+\begin{song}{Vezmi moje srdce}{3}
+[Em]Keď vstúpim do tvojej hĺkby, 
+[Am]voda ma [D]obmyje,
+[G]v tôni tvojej slávy, 
+moje [D]srdce znova ožije.
+\\
+[Em]Vykročím do neznáma, 
+[Am]láska ma povedie,
+[G]do tvôjho srdca Pane, 
+[D]kde večná pieseň znie.
+\columnbreak
+[Em]Vezmi moje srdce [C]dnes, 
+chcem Tebou nechať sa [G]viesť.
+V Tvojej blízkosti chcem [D]rásť, 
+túžim prekročiť svôj [Em]prach.
+\\
+Vezmi moje srdce [C]dnes, 
+chcem Tebou nechať sa [G]viesť.
+Tvoju lásku prináš[D]ať, 
+tam kam nedopadá [Em]dážď.
+\columnbreak
+[C]Aj keď slabí som viem, 
+v Tvojej láske strachu [Em]niet.
+Ani tma mnou neotras[D]ie, 
+Tvoja láska vo mne rastie.
+\end{song}
+
+\begin{song}{Yeshua}{2}
+\textit{\color{gray} CAPO 1}
+[C]Yeshu-uu-[Em]a-aa-aa-aa-[D]a
+\\
+Môjho [C]srdca kráľ, krásou [Em]vyniká,
+nad [G]tisíc, nad [D]tisíc.
+\columnbreak
+\end{song}
+
+\begin{song}{Žalm 23}{2}
+	[C]Aj keby som [G]dolinou šiel 
+	kde [Am]tôňa smrti svôj [F]príbytok má.
+	[C]Ja nebudem sa [G]zlého báť 
+	[Am]veď Ty si stále [F]somnou.
+	\\
+	[C]Tvôj prút a tvoja [G]palica ma 
+	[Am]potešujú na [F]mojich cestách,
+	[C]a pred mojimi [G]nepriateľmi 
+	[Am]mi bohatý stôl [F]chystáš.
+	\\
+	[C]Pán Boh je [G]pastier [F]môj,
+	[C]a na past[G]vách zele[F]ných.
+	Č[C]erstvú [G]pašu mi [F]chystá,
+	[C]k vodám [G]tichým vo[F]dí ma.
+	\columnbreak
+	[C]Dušu [G]moju na[F]pája,
+	cestou spravodlivou,
+	kvôli sebe sprevádza.
+	\\
+	[C]Olej [G]pomazan[F]ia,
+	leješ na moju hlavu.
+	A pohar môj napĺňaš.
+	Pohár môj preteká.
+	\\
+	[C]V dome [G]Hospodi[F]na,
+	ja budem naveky bývať.
+	V dome Hospodina,
+	budem naveky bývať.
+\end{song}
+
+
+
+\newpage
+%%%%%%%%%%%%%% MITO BODNAR
+
+\section{Miťo Bodnár}
+
+\begin{song}{Čo to dá}{2}
+	[Hmi]Tak jak [G]odpúšťam[D]e
+	[Hmi]my svojim [G]vinní[D]kom
+	[Hmi]tak odpusť [G]nám ty, Pan[D]e
+	[Hmi]a nene[G]chaj nás v [D]zlom
+	
+	[Hmi]Tvoja [G]vôľa nech j[D]e
+	[Hmi]v nebi [G]aj na zem[D]i
+	[Hmi]tí, čo chlieb [G]denne prosi[D]a
+	[Hmi]tak, Pane, [G]to sme my
+	[D]tu dolu na zemi [Hmi G D].
+	\columnbreak
+	\textit{\color{gray}Chorus 1:}
+	Budem [Hmi]chváliť svojho [G]Pána
+	on mi [D]silu na to [A]dá
+	budem [Hmi]spievať svojmu [G]Bohu
+	[D]spievať, čo to [A]dá
+	čo to [Hmi]dá [G D A].
+	
+	\textit{\color{gray}Chorus 1:}
+	Chcem [Hmi]teba vzývať, [G]Bože
+	[D]každý jeden [A]deň
+	ty [Hmi]víťaz si nad [G]hriechom
+	tak [D]preto spievať [A]chcem
+	spievať [Hmi]smiem [G D A].
+\end{song}
+
+
+\begin{song}{Príď tvoje kráľovstvo}{2}
+	[E]Príď tvoje kráľovstvo
+	nech [C#mi]znie tvoj tichý hlas
+	Príď tvoje[A] kráľovstvo[H]
+	medzi [E]nás
+	\\
+	[E]Príď tvoje kráľovstvo
+	tvoja [C#mi]vôľa sa staň
+	Príď tvoje [A]kráľovstvo[H]
+	ja [E]volám
+	
+	\\
+	[F#mi]Nech stratení sú nájdení
+	[A]slepý zrak nech uzrie svetla [E]jas
+	Už[F#mi] toľkokrát si odpustil
+	ty z [A]prachu zeme dvihol si [E]nás
+	\columnbreak
+	[F#mi]Dnes tvoj ľud k tebe modlí sa
+	[A]zapáľ naše srdcia pre tvoj [E]plán
+	Nech [F#mi]príde tvoje kráľovstvo
+	ja z [A]hĺbky svojho srdca vo[E]lám[H]
+	
+	\\
+	[C#mi]Prosím, Ježiš, buď môj Pán
+	nech [H]búrka v mojom vnútri ustúpi[A]
+	[C#mi]Vylej lásky oceán
+	nech môj [H]nemý hlas je opäť počutý[A]
 \end{song}
 
 
