--- a/moj_spevnik.tex
+++ b/moj_spevnik.tex
@@ -1865,6 +1865,30 @@ nad [G]tisíc, nad [D]tisíc.
 \end{song}
 
 
+\begin{song}{V tebe začínam}{2}
+	[E]V tebe začínam, v [H]tebe končím
+	z [C#]teba vychádzam, [A]k tebe sa navrátim.
+	[E]V tebe žijem Ježiš môj, [H]tebe Ježiš umieram,
+	[C#]v živote aj vo smrti, [A]tebe patriť si žiadam.
+	\\
+	Máš [E]právo dať aj vziať[H],
+	máš [C#]právo dať aj [A]vziať.
+	Ja [E]stále spievam [H]rád
+	[C#]zvelebený [A]Pán
+	\\
+	Ty musíš [E]rásť, Ty musíš [H]rásť,
+	[C#]mňa musí ubú[A]dať.
+	\\
+	Si ver[E]ný a ja budem ve[H]riť,
+	si ver[C#]ný a ja budem ve[A]riť,
+	len Tebe Jež[C#]iš, len Tebe Jež[A]iš.
+	\\
+	Len ty mi [E]stačíš,len ty mi [H]stačíš,
+	ja [C#]nepotrebujem [A]nič.
+	Len ty mi [E]stačíš,len ty mi [H]stačíš,
+	v Tebe [C#]všetko zmysel [A]má.
+\end{song}
+
 
 \newpage
 %%%%%%%%%%%%%% MITO BODNAR
